--- a/resources/users/roles.yaml
+++ b/resources/users/roles.yaml
@@ -1,4 +1,42 @@
-# admin:
-#   title: Administrator
-#   permissions:
-#     - super
+empreendimentos:
+  title: Empreendimentos
+  permissions:
+    - 'access cp'
+    - 'configure collections'
+    - 'view construtoras entries'
+    - 'edit construtoras entries'
+    - 'create construtoras entries'
+    - 'delete construtoras entries'
+    - 'publish construtoras entries'
+    - 'reorder construtoras entries'
+    - 'edit other authors construtoras entries'
+    - 'publish other authors construtoras entries'
+    - 'delete other authors construtoras entries'
+    - 'view empreendimentos entries'
+    - 'edit empreendimentos entries'
+    - 'create empreendimentos entries'
+    - 'delete empreendimentos entries'
+    - 'publish empreendimentos entries'
+    - 'reorder empreendimentos entries'
+    - 'edit other authors empreendimentos entries'
+    - 'publish other authors empreendimentos entries'
+    - 'delete other authors empreendimentos entries'
+    - 'view categoria_diferencial entries'
+    - 'edit categoria_diferencial entries'
+    - 'create categoria_diferencial entries'
+    - 'delete categoria_diferencial entries'
+    - 'publish categoria_diferencial entries'
+    - 'reorder categoria_diferencial entries'
+    - 'edit other authors categoria_diferencial entries'
+    - 'publish other authors categoria_diferencial entries'
+    - 'delete other authors categoria_diferencial entries'
+    - 'view diferenciais entries'
+    - 'edit diferenciais entries'
+    - 'create diferenciais entries'
+    - 'delete diferenciais entries'
+    - 'publish diferenciais entries'
+    - 'reorder diferenciais entries'
+    - 'edit other authors diferenciais entries'
+    - 'publish other authors diferenciais entries'
+    - 'delete other authors diferenciais entries'
+    - 'configure navs'
