--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,17 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "statamic/cms": "^5.0"
+        "statamic/cms": "dev-main as 5.x-dev",
+        "statamic/eloquent-driver": "^4.33"
     },
+    "repositories": [
+        {
+        "type": "git",
+        "url": "git@github.com:brunomy/statamic.git"
+        }
+    ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8.1",
         "fakerphp/faker": "^1.23",
