--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "tailwindcss": "^4.0.6",
         "vite": "^7.0.7",
         "vue": "^3.5.22"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.4"
     }
 }
