--- a/resources/blueprints/collections/pages/page.yaml
+++ b/resources/blueprints/collections/pages/page.yaml
@@ -1,6 +1,8 @@
+hide: true
 title: Page
 tabs:
   main:
+    display: Principal
     sections:
       -
         fields:
@@ -9,6 +11,9 @@ tabs:
             field:
               type: text
               required: true
+              localizable: false
+              validate:
+                - required
           -
             handle: content
             field:
@@ -30,6 +35,7 @@ tabs:
               display: Template
               localizable: true
   sidebar:
+    display: Sidebar
     sections:
       -
         fields:
