--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@inertiajs/react": "^2.2.9",
         "@mui/icons-material": "^7.3.4",
         "@mui/material": "^7.3.4",
+        "html-react-parser": "^5.2.8",
         "leaflet": "^1.9.4",
         "leaflet-draw": "^1.0.4",
         "leaflet-geosearch": "^4.2.2",
