--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "statamic/cms": "dev-main as 5.x-dev",
-        "statamic/eloquent-driver": "^4.33"
+        "statamic/eloquent-driver": "^4.33",
+        "tightenco/ziggy": "^2.6"
     },
     "repositories": [
         {
