--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-dom": "^19.2.0",
         "react-leaflet": "^5.0.0",
         "react-leaflet-draw": "^0.21.0",
-        "swiper": "^12.0.3"
+        "swiper": "^12.0.3",
+        "ziggy-js": "^2.6.0"
     }
 }
