--- a/resources/blueprints/forms/contato.yaml
+++ b/resources/blueprints/forms/contato.yaml
@@ -17,11 +17,9 @@ tabs:
           -
             handle: message
             field:
-              type: text
+              type: textarea
               display: Mensagem
               localizable: false
-              validate:
-                - required
       -
         display: 'Dados do lead'
         fields:
