--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-APP_NAME=Statamic
-APP_ENV=local
-APP_KEY=
+APP_TIMEZONE=America/Sao_Paulo
+
+APP_NAME=cipasa
+APP_ENV=production
+APP_KEY=base64:R/Av0xWsTTvJimxYQJPYLokN5DM96Ua7r3KKmiWZaZI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +22,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=cipasa
+DB_USERNAME=root
+DB_PASSWORD=root
+
+STATAMIC_ELOQUENT_DRIVER=true
+STATAMIC_USERS=eloquent
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -47,14 +52,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailersend.net
+MAIL_PORT=587
+MAIL_USERNAME=MS_iXdjRe@test-ywj2lpn1m1kg7oqz.mlsender.net   # o username SMTP
+MAIL_PASSWORD=mssp.cqjS7kl.zr6ke4n2m6y4on12.XUr3Lq4          # a senha SMTP
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=no-reply@test-ywj2lpn1m1kg7oqz.mlsender.net # << FROM no seu Test domain
+MAIL_FROM_NAME="Cipasa"
+QUEUE_CONNECTION=sync
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -65,12 +71,19 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 STATAMIC_LICENSE_KEY=
-STATAMIC_PRO_ENABLED=false
+STATAMIC_PRO_ENABLED=true
 STATAMIC_STACHE_WATCHER=auto
 STATAMIC_STATIC_CACHING_STRATEGY=null
 STATAMIC_REVISIONS_ENABLED=false
 STATAMIC_GRAPHQL_ENABLED=false
-STATAMIC_API_ENABLED=false
+STATAMIC_API_ENABLED=true
 STATAMIC_GIT_ENABLED=false
+STATAMIC_API_ROUTE=api
 
 DEBUGBAR_ENABLED=false
+
+GOOGLE_ANALYTICS_ID=G-GZVXL82RET
+GA_CREDENTIALS_PATH="app/analytics/cipasa-desenvolvimento-8f990d653580.json"
+GA_PROPERTY_ID=513267978  # ID da propriedade GA4 (NÚMERO, não o G-XXXX)
+GA_DAYS=30                  # quantos dias de dados mostrar
+GA_PAGE_GRAPH=true 
