--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
+        "build": "vite build && vite build --ssr",
         "dev": "vite",
         "watch": "vite"
     },
@@ -30,6 +30,7 @@
         "html-react-parser": "^5.2.8",
         "leaflet": "^1.9.4",
         "leaflet-draw": "^1.0.4",
+        "leaflet-geometryutil": "^0.10.3",
         "leaflet-geosearch": "^4.2.2",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
