SEO das páginas finalizado

--- a/resources/blueprints/collections/empreendimentos/empreendimento.yaml
+++ b/resources/blueprints/collections/empreendimentos/empreendimento.yaml
@@ -447,6 +447,7 @@ tabs:
               type: code
               display: Scripts
               localizable: false
+              mode: javascript
   sidebar:
     display: Sidebar
     sections:
