--- a/resources/blueprints/collections/pages/contato.yaml
+++ b/resources/blueprints/collections/pages/contato.yaml
@@ -279,6 +279,7 @@ tabs:
               type: code
               display: Scripts
               localizable: false
+              mode: javascript
   sidebar:
     display: Sidebar
     sections:
