--- a/resources/blueprints/collections/pages/home.yaml
+++ b/resources/blueprints/collections/pages/home.yaml
@@ -217,7 +217,9 @@ tabs:
               type: code
               display: Scripts
               localizable: false
+              mode: javascript
   sidebar:
+    display: Sidebar
     sections:
       -
         fields:
