--- a/resources/blueprints/collections/pages/sobre.yaml
+++ b/resources/blueprints/collections/pages/sobre.yaml
@@ -278,6 +278,7 @@ tabs:
               type: code
               display: Scripts
               localizable: false
+              mode: javascript
   sidebar:
     display: Sidebar
     sections:
