--- a/resources/blueprints/collections/pages/home.yaml
+++ b/resources/blueprints/collections/pages/home.yaml
@@ -2,7 +2,7 @@ hide: true
 title: Home
 tabs:
   main:
-    display: Conheça
+    display: Principal
     sections:
       -
         fields:
@@ -44,90 +44,50 @@ tabs:
               type: textarea
               display: 'Transformando sonhos em realidade'
               localizable: false
-  banner:
-    display: Banners
-    sections:
-      -
-        fields:
           -
-            handle: banner
+            handle: text_descubra
             field:
-              type: replicator
-              display: Banner
+              buttons:
+                - bold
+              remove_empty_nodes: false
+              type: bard
+              instructions: 'Descubra nossos projetos por todo Brasil'
               localizable: false
-              sets:
-                novo_grupo_de_conjuntos:
-                  display: 'Novo grupo de conjuntos'
-                  sets:
-                    novo_conjunto:
-                      display: Banner
-                      fields:
-                        -
-                          handle: empreendimento
-                          field:
-                            max_items: 1
-                            mode: select
-                            collections:
-                              - empreendimentos
-                            type: entries
-                            display: Empreendimento
-                            localizable: false
-                        -
-                          handle: titulo_banner
-                          field:
-                            buttons:
-                              - h2
-                              - bold
-                            remove_empty_nodes: false
-                            type: bard
-                            display: 'Título banner'
-                            localizable: false
-                            character_limit: 50
-                            save_html: true
-                        -
-                          handle: texto_banner
-                          field:
-                            type: textarea
-                            display: 'Texto banner'
-                            localizable: false
-                        -
-                          handle: link
-                          field:
-                            type: text
-                            display: Link
-                            localizable: false
-                            width: 50
-                        -
-                          handle: title_button
-                          field:
-                            type: text
-                            display: Título
-                            localizable: false
-                            width: 25
-                        -
-                          handle: target
-                          field:
-                            options:
-                              -
-                                key: _self
-                                value: Não
-                              -
-                                key: _blank
-                                value: Sim
-                            max_items: 1
-                            type: select
-                            display: 'Nova aba?'
-                            localizable: false
-                            width: 25
-                            default: _self
-                        -
-                          handle: imagem
-                          field:
-                            container: assets
-                            type: assets
-                            display: Imagem
-                            instructions: 'Tamanho: 950x600'
-                            localizable: false
+              display: 'Texto descubra'
+          -
+            handle: text_espacos
+            field:
+              buttons:
+                - bold
+              remove_empty_nodes: false
+              type: bard
+              instructions: 'Espaços para Viver e Investir'
+              localizable: false
+              display: 'Texto espaços'
+          -
+            handle: text_contact
+            field:
+              buttons:
+                - bold
+              remove_empty_nodes: false
+              type: bard
+              instructions: 'Não encontrou o que procurava?'
+              localizable: false
+              width: 66
+              display: 'Texto contato'
+          -
+            handle: imagem_contato
+            field:
+              max_files: 1
+              min_files: 1
+              mode: grid
+              container: assets
+              type: assets
+              display: 'Imagem Contato'
+              instructions: 'Tamanho: 940x495px'
+              localizable: false
+              width: 33
+      - {  }
   destaques:
     display: Destaques
     sections:
